# burn-onnx

./: AGENTS.md  CITATION.cff  Cargo.toml  DEVELOPMENT-GUIDE.md  README.md  SUPPORTED-ONNX-OPS.md
.cargo/: audit.toml
.github/workflows/: bump-burn.yml  model-checks.yml  test.yml
crates/burn-import/: Cargo.toml
crates/burn-onnx/: Cargo.toml
crates/model-checks/: README.md
crates/model-checks/albert/: Cargo.toml
crates/model-checks/alexnet/: Cargo.toml
crates/model-checks/all-minilm-l6-v2/: Cargo.toml
crates/model-checks/arcface/: Cargo.toml
crates/model-checks/clip-vit-b-32-text/: Cargo.toml
crates/model-checks/clip-vit-b-32-vision/: Cargo.toml
crates/model-checks/densenet121/: Cargo.toml
crates/model-checks/depth-anything-v2/: Cargo.toml
crates/model-checks/depth-pro/: Cargo.toml
crates/model-checks/inception-v1/: Cargo.toml
crates/model-checks/inception-v2/: Cargo.toml
crates/model-checks/kokoro/: Cargo.toml  README.md  bisect_setup.py  build.rs  get_model.py
crates/model-checks/kokoro/src/: main.rs
crates/model-checks/mediapipe-face-detector/: Cargo.toml
crates/model-checks/mobilenet-v2/: Cargo.toml
crates/model-checks/modernbert-base/: Cargo.toml
crates/model-checks/qwen/: Cargo.toml
crates/model-checks/resnet50/: Cargo.toml
crates/model-checks/rf-detr/: Cargo.toml
crates/model-checks/rtmw3d/: Cargo.toml
crates/model-checks/shufflenet/: Cargo.toml
crates/model-checks/silero-vad/: Cargo.toml
crates/model-checks/smollm/: Cargo.toml
crates/model-checks/smollm/src/: main.rs
crates/model-checks/squeezenet/: Cargo.toml
crates/model-checks/stable-diffusion-xl/: Cargo.toml
crates/model-checks/vgg19/: Cargo.toml
crates/model-checks/yolo/: Cargo.toml
crates/model-checks/zfnet512/: Cargo.toml
crates/onnx-ir/: Cargo.toml
crates/onnx-ir/src/: registry.rs
crates/onnx-ir/src/ir/: node.rs  (+1 more)
crates/onnx-official-tests/: Cargo.toml  README.md  build.rs  expectations.toml
crates/onnx-tests/: Cargo.toml  build.rs
examples/image-classification-web/: Cargo.toml
examples/onnx-inference/: Cargo.toml  README.md
examples/raspberry-pi-pico/: Cargo.toml
onnx-spec/ops/: SVMRegressor.md  Scaler.md
scoreboard/runner/: Cargo.toml
(+459 files in other folders)
