[package]
name = "burn-onnx-model-checks-smollm"
version = "0.1.0"
edition = "2024"
publish = false


[features]
default = ["flex"]
flex = ["burn/flex"]
tch = ["burn/tch"]
wgpu = ["burn/wgpu", "burn/autotune", "burn/fusion"]
metal = ["burn/metal", "burn/autotune", "burn/fusion"]

[dependencies]
burn = { workspace = true }
burn-store = { workspace = true, features = ["std", "burnpack", "pytorch"] }
model-checks-common = { workspace = true }

[build-dependencies]
burn-onnx = { workspace = true, features = ["default"] }
model-checks-common = { workspace = true }
